// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imperative-test-cli config list should list the configuration 1`] = `
"profiles: 
  my_profiles: 
    properties: 
    profiles: 
      secured: 
        type:       secured
        properties: 
          info: 
        secure: 
          - secret
  my_base: 
    type:       base
    properties: 
    secure: 
      (empty array)
defaults: 
  secured: my_profiles.secured
  base:    my_base
plugins: 
  (empty array)
"
`;

exports[`imperative-test-cli config list should list the configuration without showing secure values 1`] = `
"profiles: 
  my_profiles: 
    properties: 
    profiles: 
      secured: 
        type:       secured
        properties: 
          info:   
          secret: (secure value)
        secure: 
          - secret
  my_base: 
    type:       base
    properties: 
    secure: 
      (empty array)
defaults: 
  secured: my_profiles.secured
  base:    my_base
plugins: 
  (empty array)
"
`;

exports[`imperative-test-cli config list should list the defaults configuration property 1`] = `
"secured: my_profiles.secured
base:    my_base
"
`;

exports[`imperative-test-cli config list should list the profiles configuration property 1`] = `
"my_profiles: 
  properties: 
  profiles: 
    secured: 
      type:       secured
      properties: 
        info: 
      secure: 
        - secret
my_base: 
  type:       base
  properties: 
  secure: 
    (empty array)
"
`;

exports[`imperative-test-cli config list should list the root level property names only 1`] = `
"profiles
defaults
plugins
"
`;
